--- a/scss/layout/_services.scss
+++ b/scss/layout/_services.scss
@@ -96,6 +96,7 @@
   position: relative;
   top: 0;
   transition: top 0.5s ease, background-color 0.5s ease;
+  cursor: pointer;
 
   &:hover {
     top: -10px;
