--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -147,7 +147,7 @@ $white: #fff;
     background: $background-color;
     box-shadow: 0 8px 24px rgba(0,0,0,0.15);
     z-index: 1002;
-    padding: 20px 200px;
+    padding: 20px 0;
     color: $white;
 }
 
